--- a/udemy python/pyproject.toml
+++ b/udemy python/pyproject.toml
@@ -7,3 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     "flask>=3.1.1",
 ]
+
+[tool.uv.workspace]
+members = [
+    "Projects/Data handling projects",
+]
